--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,8 +1,12 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
 body {
   margin: 0;
   min-height: 100vh;
+  font-family: "Roboto", sans-serif;
 }
