--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -4,9 +4,10 @@
 @tailwind components;
 @tailwind utilities;
 
-
 body {
   margin: 0;
   min-height: 100vh;
   font-family: "Roboto", sans-serif;
+  overflow-x: hidden;
 }
+
