--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -8,3 +10,4 @@ body {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
 }
+
