--- a/client/src/app/globals.css
+++ b/client/src/app/globals.css
@@ -21,3 +21,7 @@ input::-webkit-inner-spin-button {
 input[type="number"] {
   -moz-appearance: textfield; /* Firefox */
 }
+
+input::placeholder {
+  color: #49454f;
+}
